--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,6 +3,9 @@
         <span class="navbar-text fs-5 ">copyright &copy; 2024</span>
     </div>
 </footer>
+
+<script src="/bootstrap.min.js"></script>
+
 </body>
 
 </html>
