--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,11 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Sundanese:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/bootstrap.min.css">
+
     <link rel="stylesheet" href="/blog.css" />
   </head>
   <body>
